# cadastrodealimentos

./: README.md  pyproject.toml
alimentos/: form.py  models.py  tests.py  urls.py  views.py
alimentos/migrations/: 0001_initial.py
alimentos/templates/: food.html  form_food.html
base/: tests.py  urls.py  views.py
base/static/css/: styles.css
base/templates/: base.html  footer.html  header.html  home.html
project/: settings.py  urls.py
